src/objects/Integrations_Acknowledgement__c.object
<CustomObject>
    <fields>
        <fullName>Ack3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ack3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ack4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ack4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ack_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ack 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ack_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ack 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>AnalysP</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oblicore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS Gateway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>Shows the error description from IPL or the end system</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OM_Message_activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OM Message activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technical_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technical Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UID__c</fullName>
        <label>UID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Integrations Acknowledgement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Technical_Error__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Integrations Acknowledgement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integrations Acknowledgements</pluralLabel>
    <recordTypes>
        <fullName>B2B</fullName>
        <active>true</active>
        <description>This Record Type will be used for &quot;B2B&quot;.</description>
        <label>B2B</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_B2B</fullName>
        <active>true</active>
        <description>This Record Type will be used for Other &quot;B2B&quot; Integrations.</description>
        <label>Non B2B</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>